--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-src/paralogs_GRCh38.txt
+# Ignore R files
+*.RData
+*.Rhistory
+
+# Ignore Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+src/.ipynb_checkpoints/
